#40016 offerprice Ui issue removed dropdown,border and changed currency font and fixed text line overflow in add price pop up

--- a/ShiptechV2/assets/theme/defaultweb/shiptech.scss
+++ b/ShiptechV2/assets/theme/defaultweb/shiptech.scss
@@ -10608,6 +10608,15 @@ tr.title {
   .input-disabled-new {
     pointer-events: none;
     background-color: #eee;
+    #custom-form-field{
+      .mat-form-field{
+        .mat-select{
+          .mat-select-arrow-wrapper{
+            display:none;
+          }
+        }
+      }
+    }
   }
   .disabled-new-events {
     pointer-events: none;
